# ADOSExtensions

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: release.yml
extensions/battery-health-panel/: CHANGELOG.md  README.md  config-schema.json  manifest.yaml  package.json
extensions/battery-health-panel/gcs/: package.json  plugin.css  tsconfig.json
extensions/battery-health-panel/locales/: en.json
extensions/mavlink-gimbal-v2/: CHANGELOG.md  README.md  config-schema.json  manifest.yaml  package.json
extensions/mavlink-gimbal-v2/agent/: pyproject.toml
extensions/mavlink-gimbal-v2/agent/src/altnautica_gimbal_v2/: __init__.py  gremsy_driver.py  mavlink_driver.py  mavlink_messages.py  plugin.py  sbgc_driver.py  storm32_driver.py
extensions/mavlink-gimbal-v2/agent/tests/: conftest.py  test_mavlink_driver.py  test_messages.py  test_stubs.py
extensions/mavlink-gimbal-v2/gcs/: package.json  plugin.css
extensions/mavlink-gimbal-v2/locales/: en.json
extensions/thermal-camera-flir-lepton-usb/: CHANGELOG.md  README.md  config-schema.json  manifest.yaml  package.json
extensions/thermal-camera-flir-lepton-usb/agent/: pyproject.toml
extensions/thermal-camera-flir-lepton-usb/agent/src/altnautica_thermal_camera/: __init__.py  driver.py  palettes.py  plugin.py  tlinear.py  uvc_backend.py
extensions/thermal-camera-flir-lepton-usb/agent/tests/: conftest.py  test_driver.py  test_palettes.py  test_tlinear.py
scripts/: pack.sh  sign.sh  submit.sh
(+26 files in other folders)
