[project]
name = "altnautica-thermal-camera-flir-lepton"
version = "1.0.0"
description = "ADOS plugin: FLIR Lepton 3.5 radiometric thermal camera over PureThermal 2 USB UVC"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/altnautica_thermal_camera"]

[tool.hatch.build.targets.sdist]
include = [
  "src/altnautica_thermal_camera",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
